samples/_failures_safe/1761151421_1be8c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78e63694.c: In function ‘queue_dequeue’:
./samples/SAFE/__tmp_78e63694.c:187:20: error: expected ‘;’ at end of input
  187 |         queue->rear
      |                    ^
      |                    ;
./samples/SAFE/__tmp_78e63694.c:187:9: error: expected declaration or statement at end of input
  187 |         queue->rear
      |         ^~~~~
./samples/SAFE/__tmp_78e63694.c:187:9: error: expected declaration or statement at end of input
